k8s/nginx.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-nginx
  template:
    metadata:
      labels:
        app: store-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config

---

apiVersion: v1
kind: Service
metadata:
  name: store-nginx
spec:
  selector:
    app: store-nginx
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
