k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-ingress
spec:
  rules:
    - host: store.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: store-nginx
                port:
                  number: 80
